--- a/demo/style.css
+++ b/demo/style.css
@@ -1,6 +1,6 @@
 
-[v-cloak]{
-  display: none;
+body{
+  margin: 0;
 }
 
 h2{
@@ -10,6 +10,7 @@ h2{
 .container{
   max-width: 800px;
   margin: auto;
+  padding: 0 2rem;
 }
 
 .example{
@@ -35,6 +36,7 @@ h2{
 
 .knobs{
   display: flex;
+  flex-wrap: wrap;
   margin: -0.5rem;
 }
 
@@ -45,4 +47,8 @@ h2{
 .knobs .knobs-item label{
   font-weight: bold;
   font-size: 0.9rem;
+}
+
+[v-cloak]{
+  display: none;
 }
