Add checkbox to demo page

--- a/src/checkbox.scss
+++ b/src/checkbox.scss
@@ -1,4 +1,4 @@
-input[type='checkbox']{
+input[type='checkbox'].checkbox{
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
