Add size to arrow svg

--- a/src/_arrow.scss
+++ b/src/_arrow.scss
@@ -2,7 +2,7 @@
 
 @function arrow-up($fill, $stroke: 'none'){
   @return inline-svg(
-    '<svg xmlns="http://www.w3.org/2000/svg">' +
+    '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="9">' +
       '<path d="M 0 10 L 8 1 L 16 10" fill="#{$fill}" stroke="#{$stroke}" />' +
     '</svg>'
   );
@@ -10,7 +10,7 @@
 
 @function arrow-down($fill, $stroke: 'none'){
   @return inline-svg(
-    '<svg xmlns="http://www.w3.org/2000/svg">' +
+    '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="9">' +
       '<path d="M 0 -2 L 8 7 L 16 -2" fill="#{$fill}" stroke="#{$stroke}" />' +
     '</svg>'
   );
@@ -18,7 +18,7 @@
 
 @function arrow-left($fill, $stroke: 'none'){
   @return inline-svg(
-    '<svg xmlns="http://www.w3.org/2000/svg">' +
+    '<svg xmlns="http://www.w3.org/2000/svg" width="9" height="16">' +
       '<path d="M 10 0 L 1 8 L 10 16" fill="#{$fill}" stroke="#{$stroke}" />' +
     '</svg>'
   );
@@ -26,7 +26,7 @@
 
 @function arrow-right($fill, $stroke: 'none'){
   @return inline-svg(
-    '<svg xmlns="http://www.w3.org/2000/svg">' +
+    '<svg xmlns="http://www.w3.org/2000/svg" width="9" height="16">' +
       '<path d="M -2 0 L 7 8 L -2 16" fill="#{$fill}" stroke="#{$stroke}" />' +
     '</svg>'
   );
