--- a/src/popover.scss
+++ b/src/popover.scss
@@ -140,8 +140,10 @@ details.popover{
     &.popover-top-start, &.popover-top, &.popover-top-end{
       &:before{
         background-image: arrow-down($background-color, $border-color);
+        background-repeat: no-repeat;
+        background-position: top;
         width: 16px;
-        height: 8px;
+        height: 10px;
         top: -1px;
         left: 50%;
         transform: translateX(-50%);
@@ -151,8 +153,10 @@ details.popover{
     &.popover-bottom-start, &.popover-bottom, &.popover-bottom-end{
       &:before{
         background-image: arrow-up($background-color, $border-color);
+        background-repeat: no-repeat;
+        background-position: bottom;
         width: 16px;
-        height: 8px;
+        height: 10px;
         bottom: -1px;
         left: 50%;
         transform: translateX(-50%);
@@ -162,7 +166,9 @@ details.popover{
     &.popover-left-start, &.popover-left, &.popover-left-end{
       &:before{
         background-image: arrow-right($background-color, $border-color);
-        width: 8px;
+        background-repeat: no-repeat;
+        background-position: left;
+        width: 10px;
         height: 16px;
         left: -1px;
         top: 50%;
@@ -173,7 +179,9 @@ details.popover{
     &.popover-right-start, &.popover-right, &.popover-right-end{
       &:before{
         background-image: arrow-left($background-color, $border-color);
-        width: 8px;
+        background-repeat: no-repeat;
+        background-position: right;
+        width: 10px;
         height: 16px;
         right: -1px;
         top: 50%;
