--- a/src/tooltip.scss
+++ b/src/tooltip.scss
@@ -1,5 +1,6 @@
 .tooltip{
   $border-color: #ccc;
+  $border-width: 1px;
   $background-color: #fff;
 
   position: relative;
@@ -7,64 +8,24 @@
   .tooltip-content{
     background-color: $background-color;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-    border: 1px solid $border-color;
+    border: $border-width solid $border-color;
     border-radius: 5px;
   }
 
-  &.tooltip-left-start{
+  &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end{
     .tooltip-content{
-      top: 0;
-      right: 100%;
-    }
-  }
-
-  &.tooltip-left{
-    .tooltip-content{
-      right: 100%;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-  }
-
-  &.tooltip-left-end{
-    .tooltip-content{
-      right: 100%;
-      bottom: 0;
-    }
-  }
-
-  &.tooltip-right-start{
-    .tooltip-content{
-      top: 0;
-      left: 100%;
-    }
-  }
-
-  &.tooltip-right{
-    .tooltip-content{
-      left: 100%;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-  }
-
-  &.tooltip-right-end{
-    .tooltip-content{
-      left: 100%;
-      bottom: 0;
+      bottom: 100%;
     }
   }
 
   &.tooltip-top-start{
     .tooltip-content{
-      bottom: 100%;
       right: 0;
     }
   }
 
   &.tooltip-top{
     .tooltip-content{
-      bottom: 100%;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -72,20 +33,24 @@
 
   &.tooltip-top-end{
     .tooltip-content{
-      bottom: 100%;
+      left: 0;
+    }
+  }
+
+  &.tooltip-bottom-start, &.tooltip-bottom, &.tooltip-bottom-end{
+    .tooltip-content{
+      top: 100%;
     }
   }
 
   &.tooltip-bottom-start{
     .tooltip-content{
-      top: 100%;
       right: 0;
     }
   }
 
   &.tooltip-bottom{
     .tooltip-content{
-      top: 100%;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -93,7 +58,57 @@
 
   &.tooltip-bottom-end{
     .tooltip-content{
-      top: 100%;
+      left: 0;
+    }
+  }
+
+  &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end{
+    .tooltip-content{
+      right: 100%;
+    }
+  }
+
+  &.tooltip-left-start{
+    .tooltip-content{
+      top: 0;
+    }
+  }
+
+  &.tooltip-left{
+    .tooltip-content{
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &.tooltip-left-end{
+    .tooltip-content{
+      bottom: 0;
+    }
+  }
+
+  &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
+    .tooltip-content{
+      left: 100%;
+    }
+  }
+
+  &.tooltip-right-start{
+    .tooltip-content{
+      top: 0;
+    }
+  }
+
+  &.tooltip-right{
+    .tooltip-content{
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &.tooltip-right-end{
+    .tooltip-content{
+      bottom: 0;
     }
   }
 
@@ -118,63 +133,63 @@
       border: 8px solid transparent;
     }
 
-    &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end{
-      &:before, &:after{
-        top: 50%;
-        transform: translateY(-50%);
-      }
-      &:before{
-        border-left-color: $border-color;
-        left: 0;
-      }
-      &:after{
-        border-left-color: $background-color;
-        left: -1px;
-      }
-    }
-
-    &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
-      &:before, &:after{
-        top: 50%;
-        transform: translateY(-50%);
-      }
-      &:before{
-        border-right-color: $border-color;
-        right: 0;
-      }
-      &:after{
-        border-right-color: $background-color;
-        right: -1px;
-      }
-    }
-
-    &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end{
+    &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end,
+    &.tooltip-bottom-start, &.tooltip-bottom, &.tooltip-bottom-end{
       &:before, &:after{
         left: 50%;
         transform: translateX(-50%);
       }
+    }
+
+    &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end{
       &:before{
         border-top-color: $border-color;
         top: 0;
       }
       &:after{
         border-top-color: $background-color;
-        top: -1px;
+        top: -$border-width;
       }
     }
 
     &.tooltip-bottom-start, &.tooltip-bottom, &.tooltip-bottom-end{
-      &:before, &:after{
-        left: 50%;
-        transform: translateX(-50%);
-      }
       &:before{
         border-bottom-color: $border-color;
         bottom: 0;
       }
       &:after{
         border-bottom-color: $background-color;
-        bottom: -1px;
+        bottom: -$border-width;
+      }
+    }
+
+    &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end,
+    &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
+      &:before, &:after{
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
+
+    &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end{
+      &:before{
+        border-left-color: $border-color;
+        left: 0;
+      }
+      &:after{
+        border-left-color: $background-color;
+        left: -$border-width;
+      }
+    }
+
+    &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
+      &:before{
+        border-right-color: $border-color;
+        right: 0;
+      }
+      &:after{
+        border-right-color: $background-color;
+        right: -$border-width;
       }
     }
 
@@ -189,24 +204,6 @@
       border: none;
     }
 
-    &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end{
-      &:before{
-        border-left-color: $background-color;
-      }
-      &:after{
-        content: none;
-      }
-    }
-
-    &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
-      &:before{
-        border-right-color: $background-color;
-      }
-      &:after{
-        content: none;
-      }
-    }
-
     &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end{
       &:before{
         border-top-color: $background-color;
@@ -219,6 +216,24 @@
     &.tooltip-bottom-start, &.tooltip-bottom, &.tooltip-bottom-end{
       &:before{
         border-bottom-color: $background-color;
+      }
+      &:after{
+        content: none;
+      }
+    }
+
+    &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end{
+      &:before{
+        border-left-color: $background-color;
+      }
+      &:after{
+        content: none;
+      }
+    }
+
+    &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
+      &:before{
+        border-right-color: $background-color;
       }
       &:after{
         content: none;
