--- a/src/tooltip.scss
+++ b/src/tooltip.scss
@@ -1,3 +1,5 @@
+@import 'arrow';
+
 .tooltip{
   $border-color: #ccc;
   $border-width: 1px;
@@ -112,7 +114,7 @@
     }
   }
 
-  &:before, &:after, .tooltip-content{
+  &:before, .tooltip-content{
     position: absolute;
     z-index: 50;
     opacity: 0;
@@ -120,7 +122,7 @@
   }
 
   &:hover{
-    &:before, &:after, .tooltip-content{
+    &:before, .tooltip-content{
       opacity: 1;
       pointer-events: auto;
     }
@@ -128,14 +130,17 @@
 
   &.tooltip-arrow{
 
-    &:before, &:after{
+    &:before{
       content: '';
-      border: 8px solid transparent;
+      position: absolute;
+      z-index: 51;
     }
 
     &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end,
     &.tooltip-bottom-start, &.tooltip-bottom, &.tooltip-bottom-end{
-      &:before, &:after{
+      &:before{
+        width: 16px;
+        height: 10px;
         left: 50%;
         transform: translateX(-50%);
       }
@@ -143,29 +148,27 @@
 
     &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end{
       &:before{
-        border-top-color: $border-color;
-        top: 0;
-      }
-      &:after{
-        border-top-color: $background-color;
+        background-image: arrow-down($background-color, $border-color);
+        background-repeat: no-repeat;
+        background-position: top;
         top: -$border-width;
       }
     }
 
     &.tooltip-bottom-start, &.tooltip-bottom, &.tooltip-bottom-end{
       &:before{
-        border-bottom-color: $border-color;
-        bottom: 0;
-      }
-      &:after{
-        border-bottom-color: $background-color;
+        background-image: arrow-up($background-color, $border-color);
+        background-repeat: no-repeat;
+        background-position: bottom;
         bottom: -$border-width;
       }
     }
 
     &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end,
     &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
-      &:before, &:after{
+      &:before{
+        width: 10px;
+        height: 16px;
         top: 50%;
         transform: translateY(-50%);
       }
@@ -173,22 +176,18 @@
 
     &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end{
       &:before{
-        border-left-color: $border-color;
-        left: 0;
-      }
-      &:after{
-        border-left-color: $background-color;
+        background-image: arrow-right($background-color, $border-color);
+        background-repeat: no-repeat;
+        background-position: left;
         left: -$border-width;
       }
     }
 
     &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
       &:before{
-        border-right-color: $border-color;
-        right: 0;
-      }
-      &:after{
-        border-right-color: $background-color;
+        background-image: arrow-left($background-color, $border-color);
+        background-repeat: no-repeat;
+        background-position: right;
         right: -$border-width;
       }
     }
@@ -206,37 +205,29 @@
 
     &.tooltip-top-start, &.tooltip-top, &.tooltip-top-end{
       &:before{
-        border-top-color: $background-color;
-      }
-      &:after{
-        content: none;
+        background-image: arrow-down($background-color);
+        top: 0px;
       }
     }
 
     &.tooltip-bottom-start, &.tooltip-bottom, &.tooltip-bottom-end{
       &:before{
-        border-bottom-color: $background-color;
-      }
-      &:after{
-        content: none;
+        background-image: arrow-up($background-color);
+        bottom: 0px;
       }
     }
 
     &.tooltip-left-start, &.tooltip-left, &.tooltip-left-end{
       &:before{
-        border-left-color: $background-color;
-      }
-      &:after{
-        content: none;
+        background-image: arrow-right($background-color);
+        left: 0px;
       }
     }
 
     &.tooltip-right-start, &.tooltip-right, &.tooltip-right-end{
       &:before{
-        border-right-color: $background-color;
-      }
-      &:after{
-        content: none;
+        background-image: arrow-left($background-color);
+        right: 0px;
       }
     }
 
@@ -247,13 +238,13 @@
 body:hover{
   .tooltip{
     &.tooltip-fade{
-      &:before, &:after, .tooltip-content{
+      &:before, .tooltip-content{
         transition: opacity 0.5s;
       }
     }
 
     &.tooltip-delay{
-      &:before, &:after, .tooltip-content{
+      &:before, .tooltip-content{
         transition-delay: 0.3s;
       }
     }
